--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,7 +34,9 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.sqljdbc42.jar}:\
     ${file.reference.sqljdbc42.jar-1}:\
-    ${libs.eclipselink.classpath}
+    ${libs.eclipselink.classpath}:\
+    ${libs.beans-binding.classpath}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
